change picture size, add more pictures

--- a/content/post/2016-05-20-cuba.md
+++ b/content/post/2016-05-20-cuba.md
@@ -5,6 +5,56 @@ draft: false
 featured_image: "https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/cuba/Urlaub2016-326.jpg"
 ---
 
-# H1 level title
+# TBD
 
-This is a second paragraph.
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/UPlayaGiron-002.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/UPlayaGiron-007.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-173.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-179.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-183.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-185.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-187.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-208.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-220.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-224.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-229.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-239.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-242.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-256.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-260.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-263.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-289.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-292.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-304.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-313.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-314.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-326.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-350.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-369.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-374.jpg" title="Test" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2016/cuba/urlaub2016-381.jpg" title="Test" >}}
