--- a/content/post/2018-11-23-dubai.md
+++ b/content/post/2018-11-23-dubai.md
@@ -5,40 +5,38 @@ draft: false
 featured_image: "https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-017.jpg"
 ---
 
-# H1 level title
+# TBD
 
-This is a fourth paragraph.
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2018/dubai/Dubai-001.jpg" title="Test" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-001.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2018/dubai/Dubai-003.jpg" title="Test" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-003.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2018/dubai/Dubai-004.jpg" title="Test" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-004.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2018/dubai/Dubai-006.jpg" title="Test" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-006.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2018/dubai/Dubai-008.jpg" title="Test" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-008.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2018/dubai/Dubai-016.jpg" title="Test" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-016.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2018/dubai/Dubai-017.jpg" title="Test" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-017.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2018/dubai/Dubai-019.jpg" title="Test" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-019.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2018/dubai/Dubai-022.jpg" title="Test" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-022.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2018/dubai/Dubai-023.jpg" title="Test" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-023.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2018/dubai/Dubai-025.jpg" title="Test" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-025.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2018/dubai/Dubai-027.jpg" title="Test" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-027.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2018/dubai/Dubai-028.jpg" title="Test" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-028.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2018/dubai/Dubai-029.jpg" title="Test" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-029.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2018/dubai/Dubai-036.jpg" title="Test" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-036.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2018/dubai/Dubai-039.jpg" title="Test" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-039.jpg" title="Test" >}}
-
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-046.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/images/travel/2018/dubai/Dubai-046.jpg" title="Test" >}}
