--- a/content/post/2018-11-23-dubai.md
+++ b/content/post/2018-11-23-dubai.md
@@ -3,40 +3,49 @@ title: "2018: Dubai"
 date: 2018-08-20T20:12:35+02:00
 draft: false
 featured_image: "https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-017.jpg"
+tags: ["travel", "middle east"]
+categories: ["travel", "middle east"]
 ---
 
-# TBD
+## Overview
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-001.jpg" title="Test" >}}
+* Stayed only two night, during the flight back from Japan
+* One highlight was the visit to the Jumeirah Grand Mosque, including an exceptional tour
+* The other highlight was a "Bedouin Culture Safari" with Platinum Heritage. Very well organized, small group, great guide and very interesting insights including e. g. an eagle show and a breakfast in camp
+* Due to some very inconsiderate fellow travelers, the city tour by bus was sadly a rather bad experience with a lot of unnecessary stress and discomfort
+* Usually I just start walking around a city and get lost, you should be prepared to deal with some heat and an interesting bus schedule, if you leave the central business district
+* If interested, of course dubai does provide great shopping malls and architectural landmarks
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-003.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-001.jpg" title="View of Dubai City" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-004.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-003.jpg" title="Jumeirah Grand Mosque" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-006.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-004.jpg"  title="Inside Jumeirah Grand Mosque" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-008.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-006.jpg"  title="View of Dubai City" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-016.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-008.jpg"  title="View of Burj Khalifa" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-017.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-016.jpg"  title="Nightly view from observation platform of the Burj Khalifa" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-019.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-017.jpg"  title="Nightly view from observation deck of the Burj Khalifa" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-022.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-019.jpg"  title="Nightly view of the Burj Khalifa" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-023.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-022.jpg"  title="\"The Dubai Fountain\" in front of the Burj Khalifa" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-025.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-023.jpg"  title="Sunrise view of Dubai City" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-027.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-025.jpg"  title="Jeeps used for the desert trip" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-028.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-027.jpg"  title="Trying to ride a camel" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-029.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-028.jpg"  title="Still trying to ride a camel" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-036.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-029.jpg"  title="Camel tour shadows" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-039.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-036.jpg"  title="On tour near camel territory" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-046.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-039.jpg"  title="Hugging some desert" loading="lazy">}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-046.jpg"  title="Burj al Arab during sunset" loading="lazy">}}
