--- a/content/post/2018-11-23-japan.md
+++ b/content/post/2018-11-23-japan.md
@@ -3,74 +3,80 @@ title: "2018: Japan"
 date: 2018-08-20T20:12:35+02:00
 draft: false
 featured_image: "https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/japan/Japan-132.jpg"
+tags: ["travel", "asia"]
+categories: ["travel", "asia"]
 ---
 
-# TBD
+## Overview
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-005.jpg" title="Test" >}}
+* TBD
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-006.jpg" title="Test" >}}
+### Tokyo
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-015.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-005.jpg" title="Asakusa Shrine" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-024.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-006.jpg" title="Tokyo Sky Tree" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-026.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-015.jpg" title="Imperial Palace balcony" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-038.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-024.jpg" title="teamLab Borderless digital art exhibition" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-047.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-026.jpg" title="teamLab Borderless digital art exhibition" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-055.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-038.jpg" title="Hama-rikyū Gardens" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-057.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-047.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-064.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-055.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-090.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-057.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-097.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-064.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-101.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-090.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-105.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-097.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-108.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-101.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-123.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-105.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-125.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-108.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-132.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-123.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-140.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-125.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-148.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-132.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-153.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-140.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-171.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-148.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-175.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-153.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-183.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-171.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-185.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-175.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-189.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-183.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-194.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-185.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-195.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-189.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-205.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-194.jpg" title="TODO" loading="lazy">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-208.jpg" title="Test" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-212.jpg" title="Test" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-214.jpg" title="Test" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-216.jpg" title="Test" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-219.jpg" title="Test" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-222.jpg" title="Test" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-214.jpg" title="Test" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/IMG_20181118_173100.jpg" title="Test" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/PANO_20181116_094539.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-195.jpg" title="TODO" loading="lazy">}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-205.jpg" title="TODO" loading="lazy">}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-208.jpg" title="TODO" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-212.jpg" title="TODO" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-214.jpg" title="TODO" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-216.jpg" title="TODO" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-219.jpg" title="TODO" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-222.jpg" title="TODO" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-214.jpg" title="TODO" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/IMG_20181118_173100.jpg" title="TODO" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/PANO_20181116_094539.jpg" title="TODO" loading="lazy">}}
