adding more descriptions to japan trip

--- a/content/post/2018-11-23-japan.md
+++ b/content/post/2018-11-23-japan.md
@@ -9,9 +9,17 @@ categories: ["travel", "asia"]
 
 ## Overview
 
-* TBD
+* Stayed about 23 day in total in Japan during _Momiji_ (indian summer) season. Cherry blossom season only lasts for about two weeks and is very expensive and crowded, Momiji can be experienced about 6 - 8 weeks and is tracked on several websites to catch the autumn colors.
+* Route (hubs only): [Tokyo](#tokyo) - Nagoya - [Takayama](#takayama) - [Kanazawa](#kanazawa) - [Kyoto](#kyoto) - [Hiroshima](#hiroshima) - [Miyajima](#miyajima) - [Osaka](#osaka)
+* Traveled only by public transportation, which was a great experience. The _Japan Rail Pass_ is reall worth it's money and allows usage of nearly all Shinkansen high-speed trains, combined with a lot of more local networks. For me, this was the best and most efficient way to travel between the cities.
+* For local transportation, the _Suica Card_ is great and can be used to easily pay for metros, trains, subways and busses.
+* No need to carry a heavy travel guide, all you need is the local tourist info, usually located at your arrival train station. Very friendly and helpful tourist guides provide you with a local map and all the tips you need.
+* _K-Hostel_ has several well located hostels to use, but also try local traditional accommodations or even a capsule hotel.
+* Diversity and quality of food was overwhelming, even 24/7 stores have some meals which are good. A lot of smaller restaurants have open kitchens and you can see the food preparation.
+* Tokyo Metro provides an easily understandable subway map, each station I visited was very clean, most of them did have a lot of helpful staff.
+* If needed, you can rent mobile routers to use high-speed WiFi with a local SIM card, they can be picked up at the airport and mailed back via drop-off at a postbox.
 
-### Tokyo
+### Tokyo <a name="tokyo"></a>
 
 {{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-005.jpg" title="Asakusa Shrine" loading="lazy">}}
 
@@ -29,6 +37,8 @@ categories: ["travel", "asia"]
 
 {{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-055.jpg" title="Yomeimon Gate in Nikko" loading="lazy">}}
 
+### Takayama <a name="takayama"></a>
+
 {{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-057.jpg" title="Chuzenji Lake" loading="lazy">}}
 
 {{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-064.jpg" title="Kenchoji Temple in Kamakura" loading="lazy">}}
@@ -39,9 +49,13 @@ categories: ["travel", "asia"]
 
 {{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-101.jpg" title="Landscape near Tsubakihara Dam" loading="lazy">}}
 
+### Kanazawa <a name="kanazawa"></a>
+
 {{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-105.jpg" title="Kenroku-en in Kanazawa" loading="lazy">}}
 
 {{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-108.jpg" title="Iconic Kotoji-tōrō lantern in Kenroku-en" loading="lazy">}}
+
+### Kyoto <a name="kyoto"></a>
 
 {{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-123.jpg" title="Torii path at Fushimi Inari-Taisha Shrine, Kyoto" loading="lazy">}}
 
@@ -59,11 +73,15 @@ categories: ["travel", "asia"]
 
 {{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-175.jpg" title="Kōko-en garden next to Himeji Castle" loading="lazy">}}
 
+### Hiroshima <a name="hiroshima"></a>
+
 {{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-183.jpg" title="Flame of Peace in Hiroshima Peace Memorial Park" loading="lazy">}}
 
 {{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-185.jpg" title="The A-Bomb Dome" loading="lazy">}}
 
 {{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-189.jpg" title="Shukkei-en historic Japanese garden in Hiroshima" loading="lazy">}}
+
+### Miyajima <a name="miyajima"></a>
 
 {{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-194.jpg" title="Hungry Sika deer on Itsukushima" loading="lazy">}}
 
@@ -78,6 +96,8 @@ categories: ["travel", "asia"]
 {{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-214.jpg" title="View from top of Mount Misen" loading="lazy">}}
 
 {{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-216.jpg" title="Walking down Mount Misen" loading="lazy">}}
+
+### Osaka <a name="osaka"></a>
 
 {{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-219.jpg" title="Osaka Castle" loading="lazy">}}
 
