add descriptions to iceland trip

--- a/content/post/2017-11-20-sweden.md
+++ b/content/post/2017-11-20-sweden.md
@@ -3,6 +3,8 @@ title: "2017: Sweden"
 date: 2017-11-20T20:12:35+02:00
 draft: false
 featured_image: "https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2017/sweden/Schweden-079.jpg"
+tags: ["travel", "europe"]
+categories: ["travel", "europe"]
 ---
 
 ## Overview
