--- a/content/post/2016-08-03-iceland.md
+++ b/content/post/2016-08-03-iceland.md
@@ -3,56 +3,65 @@ title: "2016: Iceland"
 date: 2016-08-03T20:12:35+02:00
 draft: false
 featured_image: "https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/iceland/Island-116.jpg"
+tags: ["travel"]
+categories: ["travel"]
 ---
 
-# TBD
+## Overview
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-007.jpg" title="Test" >}}
+* Road trip between jobs, mainly in the south and south-eastern parts, including the Golden Cirle route.
+* Stunning landscapes, stunning views, stunning prices.
+* Very friendly accommodations, usually a breakfast of Skyr and some fruit was provided.
+* Reykjavík has enough free geothermal energy to build a heating system for it's streets and sidewalks.
+* You should prepare for quite a good amount of strong winds.
+* Sadly, I missed the opportunity to dive between the continental plates.
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-027.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-007.jpg" title="Hallgrímskirkja in Reykjavík" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-029.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-027.jpg" title="On route to Thingvellir National Park" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-031.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-029.jpg" title="On route to Thingvellir National Park" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-034.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-031.jpg" title="Thingvellir National Park" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-038.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-034.jpg" title="Thingvellir National Park" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-040.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-038.jpg" title="Thingvellir National Park" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-044.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-040.jpg" title="Haukadalur geothermal area" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-048.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-044.jpg" title="Strokkur" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-052.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-048.jpg" title="Gullfoss" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-061.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-052.jpg" title="Small stream near Hveragerði" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-063.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-061.jpg" title="In front of Seljalandsfoss" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-066.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-063.jpg" title="Seljalandsfoss" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-068.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-066.jpg" title="Gljúfrafoss" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-073.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-068.jpg" title="In front of Gljúfrafoss" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-076.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-073.jpg" title="Stone cairns on a Laufskálavarða lava ridge" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-079.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-076.jpg" title="Foss á Síðu" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-086.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-079.jpg" title="Dverghamrar" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-096.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-086.jpg" title="Skaftafell Glacier" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-098.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-096.jpg" title="Landscape near Vík í Mýrdal" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-104.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-098.jpg" title="Landscape near Vík í Mýrdal" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-110.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-104.jpg" title="Rest on the way to Thórsmörk" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-115.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-110.jpg" title="View from Thórsmörk" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-116.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-115.jpg" title="Uphill to Thórsmörk" >}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-135.jpg" title="Test" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-116.jpg" title="View from Thórsmörk" >}}
+
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-135.jpg" title="Lakes near the Blue Lagoon geothermal spa" >}}
