adding descriptions to middle america trip

--- a/content/post/2018-11-23-dubai.md
+++ b/content/post/2018-11-23-dubai.md
@@ -9,12 +9,12 @@ categories: ["travel", "middle east"]
 
 ## Overview
 
-* Stayed only two night, during the flight back from Japan
-* One highlight was the visit to the Jumeirah Grand Mosque, including an exceptional tour
-* The other highlight was a "Bedouin Culture Safari" with Platinum Heritage. Very well organized, small group, great guide and very interesting insights including e. g. an eagle show and a breakfast in camp
-* Due to some very inconsiderate fellow travelers, the city tour by bus was sadly a rather bad experience with a lot of unnecessary stress and discomfort
-* Usually I just start walking around a city and get lost, you should be prepared to deal with some heat and an interesting bus schedule, if you leave the central business district
-* If interested, of course dubai does provide great shopping malls and architectural landmarks
+* Stayed only two night, during the flight back from [Japan](../2018-11-23-japan).
+* One highlight was the visit to the Jumeirah Grand Mosque, including an exceptional tour.
+* The other highlight was a "Bedouin Culture Safari" with Platinum Heritage. Very well organized, small group, great guide and very interesting insights including e. g. an eagle show and a breakfast in camp.
+* Due to some very inconsiderate fellow travelers, the city tour by bus was sadly a rather bad experience with a lot of unnecessary stress and discomfort.
+* Usually I just start walking around a city and get lost, you should be prepared to deal with some heat and an interesting bus schedule, if you leave the central business district.
+* If interested, of course dubai does provide great shopping malls and architectural landmarks.
 
 {{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/dubai/Dubai-001.jpg" title="View of Dubai City" loading="lazy">}}
 
