--- a/content/post/2018-11-23-japan.md
+++ b/content/post/2018-11-23-japan.md
@@ -18,6 +18,7 @@ categories: ["travel", "asia"]
 * Diversity and quality of food was overwhelming, even 24/7 stores have some meals which are good. A lot of smaller restaurants have open kitchens and you can see the food preparation.
 * Tokyo Metro provides an easily understandable subway map, each station I visited was very clean, most of them did have a lot of helpful staff.
 * If needed, you can rent mobile routers to use high-speed WiFi with a local SIM card, they can be picked up at the airport and mailed back via drop-off at a postbox.
+* Stopover in [Dubai](../2018-11-23-dubai)
 
 ### Tokyo <a name="tokyo"></a>
 
